--- a/task1/Планирование - анализ, идентификация проблем и поиск решений.md
+++ b/task1/Планирование - анализ, идентификация проблем и поиск решений.md
@@ -1,7 +1,10 @@
 **Проблемы и инициативы**
 
 Ключевая проблема - потеря заказов. Это critical - уже привело к финансовым и репутационным потерям. Все задачи первого приоритета будут направлены на решение этой проблемы.
-1. Добавление логирования. Нужно понимать, какие заказы теряются, на каком этапе, какие возникают при этом ошибки и т.д.
+1. Отсутствие observability
+- нет возможности отследить весь путь заказа (трейсинг)
+- нет возможности понять, в чём именно была ошибка, в какой момент (логирование)
+- нет понимания, какая нагрузка на систему, в целом какой процент выполненных заказов до обращения клиентов (мониторинг)
 2. Отсутствие безопасности. Сейчас пользователи практически напрямую вызывают MES API. Это вызывает ряд проблем и вопросов:
 - возможна DDOS атака
 - возможны кривые запросы
@@ -23,7 +26,7 @@
 **Исходя из всего вышеописанного, топ-3 задачи сделал бы следующие:**
 
 1. Блок с очередью RabbitMQ:
-- добавить логирование со стороны продюсера и со стороны консьюмера
+- добавить логирование и мониторинг со стороны продюсера и со стороны консьюмера
 - проверить настройки RabbitMQ на доставку сообщений в случае сбоев на стороне MES API
 - реализовать backpressure силами внутренних настроек RabbitMQ
 *по результатам логирования определяем следующую задачу - прокси-сервис перед MES API, переход на Kafka, сразу рефакторинг MES API
