--- a/task3/Архитектурное решение по трейсингу.md
+++ b/task3/Архитектурное решение по трейсингу.md
@@ -33,11 +33,11 @@ CLOSED [CRM] — заказ завершён. Он закрывается пос
 
 
 **Мотивация**
-1. Появится возможность найти точки, где заказы теряются. Соответственно, снизится процент потерянных заказов
-2. Появится возможность мониторить зависшие заказы, т.к. можно будет навесить алерты на длительность пребывания по каждому статусу. Таким образом, оба пункта могут повлиять на повышение процента успешно выполненных заказов
-3. Ускорение разбора ошибок, превентивное исправление проблем. В результате вырастет скорость выполнения заказов (за счет снижения времени работы над проблемными заказами), можно будет начать гарантировать SLA
-4. Информацию о статусе заказа можно будет пробрасывать в интерфейс операторам. Это косвенно повлияет на качество и скорость работы над заказами.
-5. По итогу пунктов выше вырастет удовлетворённость клиентов и снижение упущенной прибыли
+1. Появится возможность найти точки, где заказы теряются. Соответственно, снизится процент потерянных заказов (Конверсия)
+2. Появится возможность мониторить зависшие заказы, т.к. можно будет навесить алерты на длительность пребывания по каждому статусу. Таким образом, оба пункта могут повлиять на повышение процента успешно выполненных заказов (Конверсия)
+3. Ускорение разбора ошибок (MTTR), превентивное исправление проблем. В результате вырастет скорость выполнения заказов (за счет снижения времени работы над проблемными заказами), можно будет начать гарантировать SLA
+4. Информацию о статусе заказа можно будет пробрасывать в интерфейс операторам. Это косвенно повлияет на качество и скорость работы над заказами (Lead Time).
+5. По итогу пунктов выше вырастет удовлетворённость клиентов и снижение упущенной прибыли (CSAT, NPS, Lost Revenue)
 
 **Предлагаемое решение**
 
