--- a/task4/Архитектурное решение по логированию.md
+++ b/task4/Архитектурное решение по логированию.md
@@ -7,9 +7,9 @@
 2. Внутри сервисов для отслеживания корректности прохождения бизнес-логик отслеживаем по ID интересующих объектов (заказ, клиент, 3D модель и т.д.) время и смену статусов. Например, в сервисе MES API после взятия в обработку заказа должны быть записи, по которым видны переходы по статусам MANUFACTURING_APPROVED -> MANUFACTURING_STARTED -> MANUFACTURING_COMPLETED -> PACKAGING -> SHIPPED. И в конце 200 OK от очереди или CRM API (в зависимости от того, куда отправляем данные об отправке заказа).
 
 **Мотивация**
-1. Выявление ошибок. Понимать, где сейчас происходят ошибки, какие именно. Напрямую повлияет на стабильность системы.
-2. Скоращение времени разбора инцидентов. За счет понимания, что в конкретный момент ушло из системы, что пришло в другую, как данные обрабатывались.
-3. Появится возможность гарантировать SLA по решению проблем и выполнению заказов
+1. Выявление ошибок (Error Rate). Понимать, где сейчас происходят ошибки, какие именно. Напрямую повлияет на стабильность системы.
+2. Сокращение времени разбора инцидентов (MTTD, MTTR). За счет понимания, что в конкретный момент ушло из системы, что пришло в другую, как данные обрабатывались.
+3. Появится возможность гарантировать SLA по решению проблем и выполнению заказов (SLA Rate, CSAT)
 
 **Предлагаемое решение**
 
@@ -22,7 +22,10 @@
 3. S3 - хранилище логов. Для логов создается отдельный бакет, со своими доступами. Доступ имею только devops + ИБ
 4. Grafana - через Explore просмотр логов (в т.ч. с использованием trace id, если успели настроить ранее). Через Grafana настраиваем доступы на возможность просмотра логов в разрезе сервисов (разрабы), редактирование дашбордов (админы/devops). Если используется Active Diectory, можно подумать над Grafana + LDAP.
 
-Срок хранения данных и правила удаления настраиваются через Loki. При передаче логов используется шифрование. Средствами FluentBit маскируем данные через замену или удаление чувствительных данных, чтобы в Loki данные пришли уже в безопасном виде.
+При передаче логов используется шифрование. Средствами FluentBit маскируем данные через замену или удаление чувствительных данных, чтобы в Loki данные пришли уже в безопасном виде. Срок хранения данных и правила удаления настраиваются через Loki:
+compactor.retention_enabled - разрешаем compactor удаление
+limits_config.retention_period - устанавливаем длительность хранения данных
+compactor.retention_delete_delay (опционально) - защита от случайного удаления
 
 **Превращение в систему анализа логов**
 
