--- a/task5/Архитектурное решение по кешированию.md
+++ b/task5/Архитектурное решение по кешированию.md
@@ -26,6 +26,12 @@
 1. Cache Aside наиболее предпочтительный вариант с точки зрения понятности и простоты настройки. В системе, где уже куча проблем, создавать ещё одно потенциально уязвимое место кажется неправильным. Пусть кэш будет в стороне. Упадет - поднимем, не страшно. Этот вариант и нарисован на диаграмме последовательностей. Важно: если соотношение операций чтения к записи хотя бы 75 на 25 (или чтения выше), то вообще отличный вариант.
 2. Refresh Ahead + Write-Behind - это более зрелый и универсальный вариант. По идее тут намного меньшая зависимость от соотношения операций чтения/записи (при сильном перекосе чтения или записи просто убирается один из двух паттернов). Но очень пугает настройка и дальнейшая поддержка, когда у нас MES API ещё не разобран даже. Отложил бы этот вариант до момента выправления ситуации с потерянными заказами.
 
+*Итоговое решение по паттерну кэширования*
+
+Получаем информацию о соотношении количества операций на чтение и запись. В зависимости от результата:
+1. Если чтения 75% и выше - реализуем Cache Aside
+2. Если меньше - Refresh Ahead + Write-Behind
+
 *Разбор вариантов инвалидаций*
 
 - Временная инвалидация - подходит, но только в совокупности с любой другой стратегией, учитывающей реакцию на изменения
@@ -35,6 +41,13 @@
 - Инвалидация по ключу - опять же зависит от частоты поступления данных. В целом подходит, т.к. заказы между собой время ли будут пересекаться, поэтому изменения в цикле производства заказа позволят инвалидировать только конкретный заказ
 
 Не хватает данных по объемам заказа и процессу производства. Без них предположу следующие варианты:
+1. Временная + Программная - если очень сложная бизнес-логика
+2. Временная + По ключу - если не запутанная логика, где заказы друг на друга влияют
+3. Временная + На основе изменений - если процесс довольно простой, а сами изменения не очень частые
+
+*Итоговое решение по инвалидации*
+
+Получаем информацию по объемам заказов и процессам производства. Исходя из них выбираем один из следующих вариантов:
 1. Временная + Программная - если очень сложная бизнес-логика
 2. Временная + По ключу - если не запутанная логика, где заказы друг на друга влияют
 3. Временная + На основе изменений - если процесс довольно простой, а сами изменения не очень частые
